# serverless-framework

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  Readme.md  build_cli.sh  config.json  docker-compose.yml  production-checklist.md  roadmap.md  test-deploy.sh
api-controller/: Cargo.toml
api-controller/api/: Cargo.toml
api-controller/api/src/: auth_handlers.rs  config.rs  function_handlers.rs  handlers.rs  lib.rs  middleware.rs
api-controller/entity/: Cargo.toml
api-controller/entity/src/: auth.rs  function.rs
api-controller/migration/: Cargo.toml
api-controller/migration/src/: m20250111_230947_create_auth_table.rs  m20250111_231042_create_function_table.rs
api-controller/repository/: Cargo.toml
api-controller/repository/src/: auth_repo.rs  cache_repo.rs  db_repo.rs  function_repo.rs  lib.rs
api-controller/service/: Cargo.toml
api-controller/service/src/: deploy_function.rs  error.rs  lib.rs  models.rs  run_function.rs  store.rs  utils.rs
api-controller/src/: function.rs  main.rs  server.rs  template.rs
api-controller/src/function/: error.rs  function.rs  mod.rs  store.rs  utils.rs
cli/: Cargo.toml  Readme.md  main.rs  serverless_function.rs  technical-todo.md  utils.rs
cli/src/: auth.rs  host_manager.rs  main.rs  serverless_function.rs  template.rs  utils.rs
components/: Makefile
components/cli/: Cargo.toml
components/cli/src/: main.rs
components/db_entities/src/: function.rs  mod.rs
components/db_migrations/src/: m20250111_231042_create_function_table.rs
components/runtime/src/: lib.rs
components/serverless_core/: Cargo.toml
components/serverless_core/src/: lib.rs  rest_api.rs
components/serverless_core/src/backend/db/: auth.rs
components/serverless_core/src/rest_api/: services.rs
components/serverless_core/src/rest_api/middlewares/: jwt.rs
components/shared_utils/src/: template.rs
db_entities/: Cargo.toml
db_entities/src/: auth.rs  function.rs  prelude.rs
db_migrations/: Cargo.toml
db_migrations/src/: lib.rs  m20250111_230947_create_auth_table.rs  main.rs
docker_wrapper/: Cargo.toml  Dockerfile
docker_wrapper/src/: error.rs  lib.rs  utils.rs
docker_wrapper/src/core/: mod.rs  provisioning.rs  provisioning_v2.rs  runner.rs
docker_wrapper/src/shared/: utils.rs
fn_utils/: Cargo.toml
fn_utils/src/: lib.rs  template.rs
hello-api/: function.go
runner/: Cargo.toml  README.md
runner/runtime_wrapper/: error.rs  runner.rs  utils.rs
runner/src/: main.rs
runner/src/runtime_wrapper/: mod.rs
runtime/: Cargo.toml
runtime/src/core/: provisioning.rs  runner.rs
runtime/src/shared/: error.rs  utils.rs
serverless_core/: Cargo.toml
serverless_core/src/: backend.rs  db.rs  lib.rs  main.rs  rest_api.rs
serverless_core/src/api_controller/: config.rs  handlers.rs  mod.rs
serverless_core/src/api_controller/config/: function.rs  server.rs
serverless_core/src/api_controller/handlers/: auth.rs  functions.rs
serverless_core/src/api_controller/middlewares/: jwt.rs
serverless_core/src/backend/: db.rs  services.rs  utils.rs
serverless_core/src/backend/db/: function.rs  models.rs
serverless_core/src/backend/services/: deploy.rs  run.rs
serverless_core/src/db/: auth.rs  function.rs
serverless_core/src/lifecycle_manager/: deploy.rs  invoke.rs  lib.rs
serverless_core/src/lifecycle_manager/lib/: deploy.rs  error.rs  invoke.rs
serverless_core/src/rest_api/: handlers.rs
serverless_core/src/rest_api/handlers/: auth.rs  functions.rs
serverless_core/src/utils/: utils.rs
shared_utils/: Cargo.toml
shared_utils/src/: lib.rs  template.rs
