[package]
name = "docker_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.7.0", features = ["v4"] }
tokio = {version = "1.36.0", features = ["macros", "test-util"]}
bollard = "*"
termion = "4.0"
futures-util = "0.3.31"