[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.36.0", features = ["macros", "test-util"]}
bollard = "0.18.1"
futures-util = "0.3.31"
tempfile = "3.15.0"
tar = "0.4.43"
shared_utils = { path = "../shared_utils" }