[package]
name = "serverless_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="serverless-core"
path="src/main.rs"

[dependencies]
sea-orm = "1.1.4"
redis = { version = "0.28.1", features = ["tokio-comp"] }
tracing = "0.1.41"
uuid = { version = "1.7", features = ["serde", "v4"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
axum = { version = "0.6.20", features = ["macros", "multipart"] }
tower-http = { version = "0.4.0", features = ["cors"] }
futures-util = "0.3.30"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0"
hyper = { version = "0.14", features = ["server"] }
jsonwebtoken = "9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
db_migrations = { path = "../db_migrations" }
db_entities = { path = "../db_entities" }
runtime = { path = "../runtime" }
reqwest = { version = "0.11", features = ["json", "stream"] }
shared_utils = { path = "../shared_utils" }
rand = "0.8.5"
http = "0.2.11"
tempfile = "3.15.0"
urlencoding = "2.1.3"
tokio = "1.44.2"
