[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name="serverless-cli"
path="src/main.rs"

[dependencies]
clap = { version = "4.5.1"}
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11.25", features = ["blocking", "json", "multipart"] }
shared_utils = { path = "../shared_utils" }
thiserror = "1.0"
dirs = "5.0.1"

